# ml-engineer-skills

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  mlcheck-pr.yml
demo/: README.md  demo.tape
example/: leaky_pipeline.py  quickstart.py
fixtures/choosing-evaluation-metrics/: broken_accuracy_on_imbalance.py  clean_pr_auc.py
fixtures/debugging-model-training/: broken_cannot_overfit.py  broken_no_signal.py  clean_can_overfit.py  clean_learnable.py
fixtures/designing-validation-splits/: broken_group_inflation.py  broken_random_split.py  clean_generalizable_signal.py  clean_grouped_time_split.py
fixtures/detecting-data-leakage/: broken_distribution_shift.py  broken_fit_before_split.py  broken_nonlinear_target_leak.py  clean_noise_features.py  clean_pipeline.py  clean_same_distribution.py
fixtures/ensuring-reproducibility/: broken_unseeded.py  clean_seeded.py
fixtures/establishing-baselines/: broken_no_lift.py  clean_real_lift.py
skills/choosing-evaluation-metrics/: SKILL.md
skills/debugging-model-training/: SKILL.md
skills/designing-validation-splits/: SKILL.md
skills/detecting-data-leakage/: SKILL.md
skills/ensuring-reproducibility/: SKILL.md
skills/establishing-baselines/: SKILL.md
skills/ml-result-skepticism/: SKILL.md
src/mlcheck/: __init__.py  __main__.py  baselines.py  cli.py  core.py  detectors.py  fixes.py  impact.py  leakage.py  metrics.py  repro.py  splits.py
src/mlcheck/integrations/: __init__.py  jupyter.py  pytest_plugin.py
tests/: conftest.py  helpers.py  test_baselines_metrics_extra.py  test_choosing_evaluation_metrics.py  test_cli.py  test_cli_v03.py  test_core.py  test_designing_validation_splits.py  test_detecting_data_leakage.py  test_detectors.py  test_establishing_baselines.py  test_impact.py  test_integrations.py  test_leakage_patterns.py  test_output_and_fixes.py  test_repro.py
