[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcheck"
version = "0.4.0"
description = "Catch the silent ML mistakes — data leakage, broken splits, unbeaten baselines, metric malpractice — with runnable diagnostics and a one-command audit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Krishi Shah" }]
keywords = ["machine-learning", "mlcheck", "data-leakage", "model-validation", "mlops"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
notebook = ["ipython"]

[project.scripts]
mlcheck = "mlcheck.cli:main"

[project.entry-points.pytest11]
mlcheck = "mlcheck.integrations.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
